--- a/testVideoPlayer.css
+++ b/testVideoPlayer.css
@@ -186,3 +186,19 @@
 	border-bottom-left-radius: 7px;	
 	background-color: lightgrey;
 }
+.popover{
+	/*max-width: 200px;
+	max-height: 105px; */
+	font-size: 10pt;
+}
+.popover-content{
+	max-height: 76px;
+	overflow: hidden;
+}
+.popover-title{
+	max-height: 35px;
+	overflow: hidden;
+}
+.goToTime{
+	cursor: pointer;
+}
