--- a/testVideoPlayer.css
+++ b/testVideoPlayer.css
@@ -135,7 +135,7 @@
 	overflow: auto;
 }
 .newComment{
-	border: 1px solid white;
+	/*border: 1px solid white;*/
 	margin: 2px;
 	border-radius: 5px;
 }
@@ -143,7 +143,6 @@
 	padding-top: 2px;
 	padding-left: 3px;
 	color: white;
-	position: absolute;
 	border-bottom-right-radius: 5px;
 	border-bottom-left-radius: 5px;
 	/*background-color: black;*/
@@ -152,20 +151,19 @@
 	margin-left: 5px;
 }
 .icon{
+	margin-right: 4px;
 	border-radius: 5px;
-	height: 40px;
-	width: 40px;
-	margin-left: 5px;
-	margin-top: 20px;
-	vertical-align: middle;
+	height: 20px;
+	width: 20px;
+	vertical-align: top;
 	display: inline-block;
 }
 .commentText{
 	overflow: hidden;
-	color: black;
-	height: 60px;
-	width: 285px;
-	background-color: white;
+	color: white;
+	height: 45px;
+	width: 485px;
+	background-color: darkgrey;
 	border-radius: 5px;
 	margin-left: 5px;
 	margin-top: 5px;
